; ModuleID = '/home/carl/AnghaBench/mpv/audio/extr_chmap.c_mp_chmap_fill_na.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/extr_chmap.c_mp_chmap_fill_na.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_chmap = type { i32, i32* }

@MP_NUM_CHANNELS = common dso_local global i32 0, align 4
@MP_SPEAKER_ID_NA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_chmap_fill_na(%struct.mp_chmap* %0, i32 %1) #0 {
  %3 = alloca %struct.mp_chmap*, align 8
  %4 = alloca i32, align 4
  store %struct.mp_chmap* %0, %struct.mp_chmap** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @MP_NUM_CHANNELS, align 4
  %7 = icmp sle i32 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  br label %10

10:                                               ; preds = %16, %2
  %11 = load %struct.mp_chmap*, %struct.mp_chmap** %3, align 8
  %12 = getelementptr inbounds %struct.mp_chmap, %struct.mp_chmap* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* %4, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %27

16:                                               ; preds = %10
  %17 = load i32, i32* @MP_SPEAKER_ID_NA, align 4
  %18 = load %struct.mp_chmap*, %struct.mp_chmap** %3, align 8
  %19 = getelementptr inbounds %struct.mp_chmap, %struct.mp_chmap* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = load %struct.mp_chmap*, %struct.mp_chmap** %3, align 8
  %22 = getelementptr inbounds %struct.mp_chmap, %struct.mp_chmap* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %22, align 8
  %25 = sext i32 %23 to i64
  %26 = getelementptr inbounds i32, i32* %20, i64 %25
  store i32 %17, i32* %26, align 4
  br label %10

27:                                               ; preds = %10
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
